@@ -7,7 +7,6 @@ TODO
 
 --- Code Enhancements ---
 
-	* add each blog entry to twitter..
 	* openid integration
 	* CSS improvement for blockquote's
 	* Fix problems occuring because of the non-occurence of http and www in web addresses of the comment authors.. (admin panel)
