@@ -153,7 +153,7 @@ LOCALES = {
 	'en': 'en_US.utf-8',
 }
 
-VERSION = '1.0.2'
+VERSION = '1.0.3'
 
 ANONYMOUS_PASSWORD = ""
 LATEST_COMMENTS_LIMIT = 5
@@ -165,6 +165,7 @@ ALLOW_ANONYMOUS_COMMENTS = True
 TWITTER_USERNAME = ""
 TWITTER_PASSWORD = ""
 TWITTER_LIMIT = 5
+POST_TO_TWITTER = True
 
 # colorize the code in entries
 COLORIZE_CODE = True
